# helloworld-cpp-otus

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: release.yml
